--- a/ShopSavvy+/index.html
+++ b/ShopSavvy+/index.html
@@ -1,10 +1,3 @@
-<!-- /*
-* Bootstrap 5
-* Template Name: Furni
-* Template Author: Untree.co
-* Template URI: https://untree.co/
-* License: https://creativecommons.org/licenses/by/3.0/
-*/ -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -27,34 +20,31 @@
     />
     <link href="css/tiny-slider.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
-    <title>
-      Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites
-      by Untree.co
-    </title>
+    <title>ShopSavvy+</title>
   </head>
 
   <body>
     <!-- Start Header/Navigation -->
     <nav
       class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark"
-      arial-label="Furni navigation bar"
+      arial-label="ShopSavvy+ navigation bar"
     >
       <div class="container">
-        <a class="navbar-brand" href="index.html">Furni<span>.</span></a>
+        <a class="navbar-brand" href="index.html">ShopSavvy+<span>.</span></a>
 
         <button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarsFurni"
-          aria-controls="navbarsFurni"
+          data-bs-target="#navbarsShopSavvy+"
+          aria-controls="navbarsShopSavvy+"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarsFurni">
+        <div class="collapse navbar-collapse" id="navbarsShopSavvy+">
           <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
             <li class="nav-item active">
               <a class="nav-link" href="index.html">Home</a>
@@ -62,14 +52,10 @@
             <li><a class="nav-link" href="shop.html">Shop</a></li>
             <li><a class="nav-link" href="about.html">About us</a></li>
             <li><a class="nav-link" href="services.html">Services</a></li>
-            <li><a class="nav-link" href="blog.html">Blog</a></li>
             <li><a class="nav-link" href="contact.html">Contact us</a></li>
           </ul>
 
           <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-            <li>
-              <a class="nav-link" href="#"><img src="images/user.svg" /></a>
-            </li>
             <li>
               <a class="nav-link" href="cart.html"
                 ><img src="images/cart.svg"
@@ -532,7 +518,7 @@
                 ><img src="images/post-2.jpg" alt="Image" class="img-fluid"
               /></a>
               <div class="post-content-entry">
-                <h3><a href="#">How To Keep Your Furniture Clean</a></h3>
+                <h3><a href="#">How To Keep Your ShopSavvy+ture Clean</a></h3>
                 <div class="meta">
                   <span>by <a href="#">Robert Fox</a></span>
                   <span>on <a href="#">Dec 15, 2021</a></span>
@@ -547,7 +533,9 @@
                 ><img src="images/post-3.jpg" alt="Image" class="img-fluid"
               /></a>
               <div class="post-content-entry">
-                <h3><a href="#">Small Space Furniture Apartment Ideas</a></h3>
+                <h3>
+                  <a href="#">Small Space ShopSavvy+ture Apartment Ideas</a>
+                </h3>
                 <div class="meta">
                   <span>by <a href="#">Kristin Watson</a></span>
                   <span>on <a href="#">Dec 12, 2021</a></span>
@@ -607,7 +595,7 @@
         <div class="row g-5 mb-5">
           <div class="col-lg-4">
             <div class="mb-4 footer-logo-wrap">
-              <a href="#" class="footer-logo">Furni<span>.</span></a>
+              <a href="#" class="footer-logo">ShopSavvy+<span>.</span></a>
             </div>
             <p class="mb-4">
               Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio
