Commit 3: Content Changes

--- a/ShopSavvy+/index.html
+++ b/ShopSavvy+/index.html
@@ -73,12 +73,10 @@
         <div class="row justify-content-between">
           <div class="col-lg-5">
             <div class="intro-excerpt">
-              <h1>
-                Modern Interior <span clsas="d-block">Design Studio</span>
-              </h1>
+              <h1>Furniture Of The<span clsas="d-block"> Future </span></h1>
               <p class="mb-4">
-                Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
-                velit. Aliquam vulputate velit imperdiet dolor tempor tristique.
+                Choose The Perfect Furniture For Your Home, With The Help Of
+                Technology
               </p>
               <p>
                 <a href="shop.html" class="btn btn-info me-2">Shop Now</a>
@@ -667,9 +665,7 @@
                 <script>
                   document.write(new Date().getFullYear())
                 </script>
-                . All Rights Reserved. &mdash; Designed with love by
-                <a href="https://untree.co">Untree.co</a> Distributed By
-                <a hreff="https://themewagon.com">ThemeWagon</a>
+                . All Rights Reserved. &mdash; Designed & Modified By Humza Ali
                 <!-- License information: https://untree.co/license/ -->
               </p>
             </div>
