--- a/ShopSavvy+/about.html
+++ b/ShopSavvy+/about.html
@@ -1,10 +1,3 @@
-<!-- /*
-* Bootstrap 5
-* Template Name: ShopSavvy+
-* Template Author: Untree.co
-* Template URI: https://untree.co/
-* License: https://creativecommons.org/licenses/by/3.0/
-*/ -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -536,9 +529,7 @@
                 <script>
                   document.write(new Date().getFullYear())
                 </script>
-                . All Rights Reserved. &mdash; Designed with love by
-                <a href="https://untree.co">Untree.co</a> Distributed By
-                <a hreff="https://themewagon.com">ThemeWagon</a>
+                . All Rights Reserved. &mdash; Designed & Modified By Humza Ali
                 <!-- License information: https://untree.co/license/ -->
               </p>
             </div>
