--- a/ShopSavvy+/checkout.html
+++ b/ShopSavvy+/checkout.html
@@ -710,9 +710,7 @@
                 <script>
                   document.write(new Date().getFullYear())
                 </script>
-                . All Rights Reserved. &mdash; Designed with love by
-                <a href="https://untree.co">Untree.co</a> Distributed By
-                <a hreff="https://themewagon.com">ThemeWagon</a>
+                . All Rights Reserved. &mdash; Designed & Modified By Humza Ali
                 <!-- License information: https://untree.co/license/ -->
               </p>
             </div>
