--- a/ShopSavvy+/services.html
+++ b/ShopSavvy+/services.html
@@ -131,7 +131,7 @@
               <div class="icon">
                 <img src="images/support.svg" alt="Image" class="imf-fluid" />
               </div>
-              <h3>24/7 Support</h3>
+              <h3>AI-Curated Recommendations</h3>
               <p>
                 Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
                 velit. Aliquam vulputate.
@@ -144,59 +144,7 @@
               <div class="icon">
                 <img src="images/return.svg" alt="Image" class="imf-fluid" />
               </div>
-              <h3>Hassle Free Returns</h3>
-              <p>
-                Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
-                velit. Aliquam vulputate.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-6 col-md-6 col-lg-3 mb-4">
-            <div class="feature">
-              <div class="icon">
-                <img src="images/truck.svg" alt="Image" class="imf-fluid" />
-              </div>
-              <h3>Fast &amp; Free Shipping</h3>
-              <p>
-                Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
-                velit. Aliquam vulputate.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-6 col-md-6 col-lg-3 mb-4">
-            <div class="feature">
-              <div class="icon">
-                <img src="images/bag.svg" alt="Image" class="imf-fluid" />
-              </div>
-              <h3>Easy to Shop</h3>
-              <p>
-                Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
-                velit. Aliquam vulputate.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-6 col-md-6 col-lg-3 mb-4">
-            <div class="feature">
-              <div class="icon">
-                <img src="images/support.svg" alt="Image" class="imf-fluid" />
-              </div>
-              <h3>24/7 Support</h3>
-              <p>
-                Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
-                velit. Aliquam vulputate.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-6 col-md-6 col-lg-3 mb-4">
-            <div class="feature">
-              <div class="icon">
-                <img src="images/return.svg" alt="Image" class="imf-fluid" />
-              </div>
-              <h3>Hassle Free Returns</h3>
+              <h3>AR/VR Feature To Display In Real Life</h3>
               <p>
                 Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
                 velit. Aliquam vulputate.
@@ -214,7 +162,7 @@
         <div class="row">
           <!-- Start Column 1 -->
           <div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
-            <h2 class="mb-4 section-title">Crafted with excellent material.</h2>
+            <h2 class="mb-4 section-title">Cheaper Than Other Services</h2>
             <p class="mb-4">
               Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
               velit. Aliquam vulputate velit imperdiet dolor tempor tristique.
@@ -230,7 +178,7 @@
                 src="images/product-1.png"
                 class="img-fluid product-thumbnail"
               />
-              <h3 class="product-title">Nordic Chair</h3>
+              <h3 class="product-title">Nordic Chair on ShopSavvy+</h3>
               <strong class="product-price">$50.00</strong>
 
               <span class="icon-cross">
@@ -244,10 +192,10 @@
           <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
             <a class="product-item" href="#">
               <img
-                src="images/product-2.png"
+                src="images/product-1.png"
                 class="img-fluid product-thumbnail"
               />
-              <h3 class="product-title">Kruzo Aero Chair</h3>
+              <h3 class="product-title">Nordic Chair on Amazon</h3>
               <strong class="product-price">$78.00</strong>
 
               <span class="icon-cross">
@@ -261,11 +209,11 @@
           <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
             <a class="product-item" href="#">
               <img
-                src="images/product-3.png"
+                src="images/product-1.png"
                 class="img-fluid product-thumbnail"
               />
-              <h3 class="product-title">Ergonomic Chair</h3>
-              <strong class="product-price">$43.00</strong>
+              <h3 class="product-title">Nordic Chair on Daraz</h3>
+              <strong class="product-price">$93.00</strong>
 
               <span class="icon-cross">
                 <img src="images/cross.svg" class="img-fluid" />
@@ -277,140 +225,6 @@
       </div>
     </div>
     <!-- End Product Section -->
-
-    <!-- Start Testimonial Slider -->
-    <div class="testimonial-section before-footer-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-7 mx-auto text-center">
-            <h2 class="section-title">Testimonials</h2>
-          </div>
-        </div>
-
-        <div class="row justify-content-center">
-          <div class="col-lg-12">
-            <div class="testimonial-slider-wrap text-center">
-              <div id="testimonial-nav">
-                <span class="prev" data-controls="prev"
-                  ><span class="fa fa-chevron-left"></span
-                ></span>
-                <span class="next" data-controls="next"
-                  ><span class="fa fa-chevron-right"></span
-                ></span>
-              </div>
-
-              <div class="testimonial-slider">
-                <div class="item">
-                  <div class="row justify-content-center">
-                    <div class="col-lg-8 mx-auto">
-                      <div class="testimonial-block text-center">
-                        <blockquote class="mb-5">
-                          <p>
-                            &ldquo;Donec facilisis quam ut purus rutrum
-                            lobortis. Donec vitae odio quis nisl dapibus
-                            malesuada. Nullam ac aliquet velit. Aliquam
-                            vulputate velit imperdiet dolor tempor tristique.
-                            Pellentesque habitant morbi tristique senectus et
-                            netus et malesuada fames ac turpis egestas. Integer
-                            convallis volutpat dui quis scelerisque.&rdquo;
-                          </p>
-                        </blockquote>
-
-                        <div class="author-info">
-                          <div class="author-pic">
-                            <img
-                              src="images/person-1.png"
-                              alt="Maria Jones"
-                              class="img-fluid"
-                            />
-                          </div>
-                          <h3 class="font-weight-bold">Maria Jones</h3>
-                          <span class="position d-block mb-3"
-                            >CEO, Co-Founder, XYZ Inc.</span
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- END item -->
-
-                <div class="item">
-                  <div class="row justify-content-center">
-                    <div class="col-lg-8 mx-auto">
-                      <div class="testimonial-block text-center">
-                        <blockquote class="mb-5">
-                          <p>
-                            &ldquo;Donec facilisis quam ut purus rutrum
-                            lobortis. Donec vitae odio quis nisl dapibus
-                            malesuada. Nullam ac aliquet velit. Aliquam
-                            vulputate velit imperdiet dolor tempor tristique.
-                            Pellentesque habitant morbi tristique senectus et
-                            netus et malesuada fames ac turpis egestas. Integer
-                            convallis volutpat dui quis scelerisque.&rdquo;
-                          </p>
-                        </blockquote>
-
-                        <div class="author-info">
-                          <div class="author-pic">
-                            <img
-                              src="images/person-1.png"
-                              alt="Maria Jones"
-                              class="img-fluid"
-                            />
-                          </div>
-                          <h3 class="font-weight-bold">Maria Jones</h3>
-                          <span class="position d-block mb-3"
-                            >CEO, Co-Founder, XYZ Inc.</span
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- END item -->
-
-                <div class="item">
-                  <div class="row justify-content-center">
-                    <div class="col-lg-8 mx-auto">
-                      <div class="testimonial-block text-center">
-                        <blockquote class="mb-5">
-                          <p>
-                            &ldquo;Donec facilisis quam ut purus rutrum
-                            lobortis. Donec vitae odio quis nisl dapibus
-                            malesuada. Nullam ac aliquet velit. Aliquam
-                            vulputate velit imperdiet dolor tempor tristique.
-                            Pellentesque habitant morbi tristique senectus et
-                            netus et malesuada fames ac turpis egestas. Integer
-                            convallis volutpat dui quis scelerisque.&rdquo;
-                          </p>
-                        </blockquote>
-
-                        <div class="author-info">
-                          <div class="author-pic">
-                            <img
-                              src="images/person-1.png"
-                              alt="Maria Jones"
-                              class="img-fluid"
-                            />
-                          </div>
-                          <h3 class="font-weight-bold">Maria Jones</h3>
-                          <span class="position d-block mb-3"
-                            >CEO, Co-Founder, XYZ Inc.</span
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- END item -->
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- End Testimonial Slider -->
 
     <!-- Start Footer Section -->
     <footer class="footer-section">
@@ -531,9 +345,7 @@
                 <script>
                   document.write(new Date().getFullYear())
                 </script>
-                . All Rights Reserved. &mdash; Designed with love by
-                <a href="https://untree.co">Untree.co</a> Distributed By
-                <a hreff="https://themewagon.com">ThemeWagon</a>
+                . All Rights Reserved. &mdash; Designed & Modified By Humza Ali
                 <!-- License information: https://untree.co/license/ -->
               </p>
             </div>
