Commit 6: Changes To Color

--- a/ShopSavvy+/index.html
+++ b/ShopSavvy+/index.html
@@ -25,6 +25,7 @@
 
   <body>
     <!-- Start Header/Navigation -->
+    <!-- Color -->
     <nav
       class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark"
       arial-label="ShopSavvy+ navigation bar"
